MODINVUP-127 use folio-vertx-lib, Open API 3 (#130)
* MODINVUP-127 towards using folio-vertx-lib

  - add initial Open API 3.1 spec, using inline schemas

* MODINVUP-127 towards using folio-vertx-lib

  - update POM
  - migrate APIs using OpenAPI contract (wip)

* MODINVUP-127 migrate module to folio-vertx-lib

  - validate for JSON body in contract, still defer validation of individual records to the code
  - remove RAML based specs (replace by Open API YAML)

* MODINVUP-127 tidy imports

* MODINVUP-127 replace RAML lint with Open API lint

* MODINVUP-127 remove RAML git submodule, POM configs

* MODINVUP-127 remove orphaned RAML property from POM

 -- and commit/push to test failing build in Jenkins.

* MODINVUP-127 Change api-doc from RAML to Open API

* MODINVUP-127 pass property as either boolean or string.

* MODINVUP-127 fix mockito version mix-up

* MODINVUP-127 Open API fixes

  - in compliance with upcoming OAS lint rules in FOLIO Github workflows

* Update pom.xml

Co-authored-by: Adam Dickmeiss <adam@indexdata.dk>

* MODINVUP-127 PR obs

  -- remove obsolete tenant2api call

* MODINVUP-127 PR obs

  -- shorten method name, var name to short handler invocation code lines

* Update src/main/java/org/folio/inventoryupdate/UpdateRequest.java

Co-authored-by: julianladisch <533612+julianladisch@users.noreply.github.com>

* MODINVUP-127 PR obs

  -- misc

* MODINVUP-127 PR obs

  -- misc

* MODINVUP-127 PR obs

  -- misc

* MODINVUP-127 PR obs

  -- misc

* MODINVUP-127 SQ obs

---------

Co-authored-by: Adam Dickmeiss <adam@indexdata.dk>
Co-authored-by: julianladisch <533612+julianladisch@users.noreply.github.com>